Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetIntObj.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Integer> yoda
        Integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
