Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextRetIntObjFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
